--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-step-progress": "^0.3.6",
+    "vue-toastr": "^2.1.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
